--- a/major.html
+++ b/major.html
@@ -29,6 +29,8 @@
 
 <p>From a societal perspective, the world around us is constantly improving, especially from a technological standpoint. From the busy streets of downtown to the peaceful neighborhood in the suburbs, different jobs are replaced by technology. Take mcdonalds for example, there are now machines which you can give your orders to and they’ll automatically order the food for you. Even surgeons now rely on technology during dangerous operations. With a degree in computer science, I would pursue a career as an software engineer because of the growing technological innovation that is prevalent in today’s society. With this degree as a starting line I want to find alternatives for today's problems that people must face, ideas for the future, and inspiration for many of the younger generations.</p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=Giiz81_uzK8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 </body>
 
 </html>
