--- a/major.html
+++ b/major.html
@@ -20,12 +20,12 @@
 <p>Taking a Software development class in my senior year of highschool really paved a path for my future interest in computer science. During my time in that class, we went over various different syntaxes and methods which allowed code objects to repeat over and over again called the for loop. In my head I visualized various different applications which I can utilize this method such as creating a coin flip application which utilizes the import of random statements. This class really got me excited as I could see endless possibilities that technology can offer to us. My mind repeatedly asked “how does this work??” or “why does it do that? How can I make an alternative for that iteration?”... I hunger for answers. Even when the pandemic hits, I applied for khan academy and self taught most of the class materials so that I can follow along.</p>
 
 
-<img src="project-1/computer.jpg" alt="Computer" width="640" height="360">
+<img src="computer.jpg" alt="Computer" width="640" height="360">
 
 
 <p>During my time in Depaul, I applied for the accelerated python computer science class and received an open spot for it. Within the syllabus, it warned that novice coders should not take this class for now, but I know that I can persevere through it. In the beginning, whether the professor introduced the fundamentals of  different code methods, I was able to follow along since I learned a bit of Swift IOS coding from highschool. Knowing that a school lecture alone isn’t sufficient and the speed of the lecture was extremely fast especially for a beginner like me, I opt for different solutions such as udemy which offers online courses on python.  From my past experience, I learned that computer science is mostly self taught, and the professors can only guide you, not hold your hand all the way. I had a really great time in that class which might be why I do not find the class extremely challenging even though it was accelerated.</p>
 
-<img src="project-1/DPU.jpg" alt="DPU" width="640" height="360">
+<img src="DPU.jpg" alt="DPU" width="640" height="360">
 
 <p>From a societal perspective, the world around us is constantly improving, especially from a technological standpoint. From the busy streets of downtown to the peaceful neighborhood in the suburbs, different jobs are replaced by technology. Take mcdonalds for example, there are now machines which you can give your orders to and they’ll automatically order the food for you. Even surgeons now rely on technology during dangerous operations. With a degree in computer science, I would pursue a career as an software engineer because of the growing technological innovation that is prevalent in today’s society. With this degree as a starting line I want to find alternatives for today's problems that people must face, ideas for the future, and inspiration for many of the younger generations.</p>
 
